--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet"/>
-  <title>async-validator@1.8.2 - validate form asynchronous</title>
+  <title>@sdp.nd/async-validator@1.8.2 - validate form asynchronous</title>
   <style>
     @font-face {
       font-family: octicons-anchor;
@@ -737,14 +737,14 @@
 
 <body>
 <div class="header">
-  <h1>async-validator@1.8.2</h1>
+  <h1>@sdp.nd/async-validator@1.8.2</h1>
 </div>
 <div class="examples">
   <h3>EXAMPLES</h3>
   <div class="examples-body">
     <ul>
       
-      <li><a href="examples/simple.html">simple</a></li>
+      <li><a href="examples\simple.html">simple</a></li>
       
     </ul>
   </div>
